fix: reset default href color on Firefox

--- a/css/_globals.css
+++ b/css/_globals.css
@@ -33,6 +33,9 @@ body {
 ul , li{
     list-style: none;
 }
+a{
+    color: #000000;
+}
 
 .top-title {
     font-size: 20px;
